src/css/style.css
:root {
  --rustyRed: #B12E0A;
  --rustRed_dark: #9c2606;
  --eerieBlack: #1C1C1C;
  --fujiSnow: #F1EFE9;
  --warmCopper: #B76E56;

  --fs-xs: clamp(0.8rem, 0vi + 0.8rem, 0.8rem);
  --fs-s: clamp(1rem, 0vi + 1rem, 1.06rem);
  --fs-m: clamp(1.25rem, 0vi + 1.25rem, 1.42rem);
  --fs-l: clamp(1.56rem, 0vi + 1.56rem, 1.89rem);
  --fs-xl: clamp(1.95rem, 0vi + 1.95rem, 2.52rem);
  --fs-2xl: clamp(2.44rem, 0vi + 2.44rem, 3.35rem);
  --fs-3xl: clamp(3.05rem, 0vi + 3.05rem, 4.47rem);

  --ws-3xs: clamp(0.25rem, 0.2283rem + 0.1087vw, 0.3125rem);
  --ws-2xs: clamp(0.5rem, 0.4783rem + 0.1087vw, 0.5625rem);
  --ws-xs: clamp(0.75rem, 0.7065rem + 0.2174vw, 0.875rem);
  --ws-s: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
  /* 1rem */
  --ws-m: clamp(1.5rem, 1.4348rem + 0.3261vw, 1.6875rem);
  --ws-l: clamp(2rem, 1.913rem + 0.4348vw, 2.25rem);
  /* 2rem */
  --ws-xl: clamp(3rem, 2.8696rem + 0.6522vw, 3.375rem);
  --ws-2xl: clamp(4rem, 3.8261rem + 0.8696vw, 4.5rem);
  --ws-3xl: clamp(6rem, 5.7391rem + 1.3043vw, 6.75rem);

  --garamond: "Cormorant Garamond", serif;
  --inter: "Inter", sans-serif;
}

body {
  background-color: var(--fujiSnow);
}

.visiblity-hidden {
  visibility: hidden;
}

.nav__wrapper {
  margin-block-start: 1.5rem;
  margin-inline-start: 1rem;
  margin-inline-end: 1rem;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 3.5rem;
}

.hamburger,
.close-btn {
  display: none;
  font-size: clamp(2rem, 1.25rem + 2vw, 4rem);
  background: none;
  border: none;
  position: absolute;
  cursor: pointer;
}

.hamburger {
  right: 1.25rem;
  top: 1.25rem;
  color: black;
}

.close-btn {
  right: 1.25rem;
  top: 1.25rem;
  color: black;
}

.menu__item {
  font-family: var(--inter);
  text-transform: capitalize;
  width: fit-content;
  padding: 1.5rem;
  margin-block-end: 1rem;
  font-weight: 600;
}

.menu__item--special {
  background-color: var(--rustyRed);
  color: var(--fujiSnow);
}

.menu__item--special:active {
  background-color: var(--rustRed_dark);
}

.menu.active .close-btn {
  display: block;
}

.hamburger,
.close-btn {
  display: none;
}

header {
  position: relative;
}

.header__texture--back {
  background-image: url("../assets/jpeg/calliTextrueMobile.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  mix-blend-mode: screen;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -10;
}

.header__texture--front {
  background-image: url("../assets/jpeg/leatherTextureMobile.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  mix-blend-mode: soft-light;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.header__wrapper,
.hero__wrapper {
  display: flex;
  flex-direction: column;
}

.hero__wrapper {
  align-items: center;
}

.title__wrapper> :nth-child(1) {
  font-family: var(--garamond);
  font-size: 4.6875rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  text-transform: uppercase;
}

.title__wrapper> :nth-child(2) {
  font-family: var(--inter);
  font-size: 5rem;
  font-style: normal;
  font-weight: 900;
  letter-spacing: -0.55rem;
  text-transform: uppercase;
}

.title__wrapper> :nth-child(4) {
  font-family: var(--garamond);
  font-size: 12.8125rem;
  font-weight: 700;
  letter-spacing: -3rem;
  text-transform: uppercase;
  margin-inline-start: -3rem;
}

.title__wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.accent__text {
  font-family: var(--garamond);
  text-transform: capitalize;
  letter-spacing: 0.28125rem;
  font-size: 0.9rem;
  font-weight: 700;
}

.hero__wrapper>div:nth-of-type(3)>p.accent__text {
  display: none;
}

.flipcard__container {
  perspective: 1000px;
  cursor: pointer;
}

.flipcard {
  position: relative;
  width: 19rem;
  height: 26rem;
  transform-style: preserve-3d;
  transition: transform 0.6s;
}

.flipcard.flipped {
  transform: rotateY(180deg);
}

.flipcard__front,
.flipcard__back {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 0.6rem;
  backface-visibility: hidden;
}

.flipcard__front {
  background-color: var(--warmCopper);
  display: flex;
  justify-content: center;
  align-items: center;
  transform: rotateY(0deg);
}

.flipcard__back {
  background-color: var(--rustyRed);
  display: flex;
  justify-content: center;
  align-items: center;
  transform: rotateY(180deg);
}

h2 {
  font-family: var(--garamond);
  font-size: 2.1875rem;
  font-weight: 700;
  text-transform: capitalize;
}

.bodycopy {
  font-family: var(--inter);
  font-size: 1.0625rem;
  line-height: 140%;
}

.book__binding {
  margin-block-start: 4rem;
}

.book__binding--intro {
  margin-inline-start: 2rem;
  margin-inline-end: 2rem;
  margin-block-end: 4rem;
}

.book__binding--title {
  margin-block-end: 2rem;
  justify-self: center;
}

.book__binding--steps {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  row-gap: 1rem;
}

.book__binding--button {
  background-image: url("../assets/svg/buttonSmall.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 10rem;
  width: 10rem;
  height: 4rem;
  margin-inline-start: .5rem;
  margin-inline-end: .5rem;
}

.divider {
  display: flex;
  justify-content: center;
  gap: 1.3rem;
  margin-block-start: 6rem;
}

.divider__group {
  flex-shrink: 0;
}

.divider__text--big {
  font-family: var(--inter);
  font-size: 2.6875rem;
  font-weight: 900;
  text-transform: uppercase;
  letter-spacing: -0.29563rem;
  text-align: center;
}

.spacing{
  margin-inline-start: .5rem;
}

.divider__text--small{
  font-family: var(--garamond);
  font-size: 0.875rem;
  text-align: center;
  font-weight: 700;
  line-height: 1.875rem;
  letter-spacing: 0.2625rem;
  text-transform: capitalize;
}

@media only screen and (min-width: 23em) {
  .container::before {
    content: "min-width: 23em";
  }

  .museum__logo {
    width: 5rem;
    height: 4.71356rem;
  }

  .hamburger {
    display: block;
    top: 1rem;
    right: 1rem;
  }

  .menu {
    display: none;
    top: 0;
    left: 0;
    background-color: var(--fujiSnow);
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 999;
  }

  .menu.active {
    display: flex;
    position: fixed;
    height: 100vb;
    width: 100vi;
  }

  .menu__list {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
  }

  .close-btn {
    display: none;
  }

  .menu.active .close-btn {
    display: block;
  }

  .title__wrapper> :nth-child(1) {
    order: 1;
  }

  .title__wrapper> :nth-child(2) {
    order: 2;
  }

  .title__wrapper> :nth-child(3) {
    order: 4;
  }

  .title__wrapper> :nth-child(4) {
    order: 3;
    justify-self: center;
  }

  .header__img {
    margin-block-start: -10rem;
  }
}

@media only screen and (min-width: 52em) {
  .container::before {
    content: "min-width: 52em";
  }

  .nav__wrapper {
    justify-content: center;
  }

  .menu__list {
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 3.4375rem;
  }

  .title__accent {
    color: var(--fujiSnow);
  }

  .title__wrapper> :nth-child(1) {
    order: 1;
    font-size: 6rem;
  }

  .title__wrapper> :nth-child(2) {
    order: 2;
    font-size: 11rem;
    letter-spacing: -1.625rem;
  }

  .title__wrapper> :nth-child(3) {
    order: 3;
    margin-block-start: -15rem;
  }

  .title__wrapper> :nth-child(4) {
    order: 4;
    justify-self: center;
    letter-spacing: 1.5rem;
    margin-inline-start: 0rem;
    font-size: 15rem;
    margin-block-start: -12rem;
  }

  .hero__wrapper {
    display: flex;
    justify-content: center;
  }

  .header__img {
    margin-block-start: 0rem;
  }

  .accent__text {
    font-size: 1.5625rem;
    font-weight: 700;
  }
}

@media only screen and (min-width: 75em) {
  .container::before {
    content: "min-width: 90em";
  }

  .hamburger {
    display: none;
  }

  .menu {
    display: block;
    background-color: transparent;
  }

  .menu__item--special:hover {
    background-color: var(--rustRed_dark);
  }
}

@media only screen and (min-width: 90em) {
  .container::before {
    content: "min-width: 90em";
  }

  .hero__wrapper {
    flex-direction: row;
  }

  .accent__text {
    display: flex;
    flex-direction: column;
    width: 9rem;
  }

  .right__word {
    text-align: right;
  }
}

